[dependencies]
autodiff = '0.5.1'
crossbeam = '0.8.2'
itertools = '0.10.5'
ndarray = '0.15.6'
num = '0.4.0'
rand_distr = '0.4.3'
rayon = '1.5.3'
thiserror = '1.0.37'
lockfree-object-pool = "0.1.3"

[dependencies.rand]
features = ['small_rng']
version = '0.8.5'

[dev-dependencies]
approx = '0.5.1'
criterion = '0.4.0'
nix = '0.25.0'
pretty_assertions = '1.2.1'
proptest = '1.0.0'

[features]
nightly = ['simd_support']
simd_support = []

[package]
authors = ['GU Junhua <jhgu@nao.cas.cn>']
description = 'Sample from unnormalized densities using Hamiltonian MCMC forked from nuts-rs'
edition = '2021'
keywords = [
    'statistics',
    'bayes',
]
license = 'MIT'
name = 'nuts'
repository = 'https://github.com/astrojhgu/nuts'
version = '0.3.0'
[profile.bench]
codegen-units = 1
debug = true
lto = 'fat'
opt-level = 2

[profile.release]
codegen-units = 1
debug = true
lto = 'fat'
opt-level = 2
